--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +10,7 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:id="@+id/titleFragmentContainerLandscape"
+        android:id="@+id/titleFragmentContainer"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,14 +23,14 @@
         android:id="@+id/viewArea"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@+id/titleFragmentContainerLandscape"
-        app:layout_constraintEnd_toStartOf="@+id/articleFragmentContainerLandscape"
+        app:layout_constraintStart_toEndOf="@+id/titleFragmentContainer"
+        app:layout_constraintEnd_toStartOf="@+id/articleFragmentContainer"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@android:color/darker_gray" />
 
     <FrameLayout
-        android:id="@+id/articleFragmentContainerLandscape"
+        android:id="@+id/articleFragmentContainer"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toEndOf="@+id/viewArea"
@@ -37,5 +38,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintWidth_percent="0.5" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
